@@ -1,5 +1,10 @@
 2005-10-21  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c: (logview_create_model_no_date):
+	* logrtns.c: (log_open): Please don't crash.
+
+2005-10-21  Vincent Noel  <vnoel@cox.net>
+
 	* calendar.c: (calendar_mark_dates), (calendar_init_data),
 	(calendar_month_changed), (calendar_day_selected),
 	(calendar_select_date), (calendar_connect), (calendar_init),
